Adding Bootstrap and styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,12 @@
+$navbar-default-bg: #1d2120;
+$navbar-default-link-color: #FEFFFE;
+$navbar-default-link-hover-color: #ba9077;
+$navbar-default-brand-color: #FEFFFE;
+$navbar-default-brand-hover-color: #ba9077;
+$body-bg: #5a5c51;
+$text-color: #FEFFFE;
+$link-color: #bcd5d1;
+$alert-info-bg: #bcd5d1;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
