--- a/app/views/notifications/new.html.erb
+++ b/app/views/notifications/new.html.erb
@@ -5,5 +5,5 @@
     <%= f.input :email %>
     <%= f.input :contact_email %>
     <%= f.input :message %>
-    <%= f.submit %>
+    <%= f.button :submit %>
 <% end %>
