--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TrailBlazers</title>
+  <title>On The Trail</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' => true %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<%= render partial: 'shared/navbar' =%>
 
 <% if alert.present? %>
   <div class="alert alert-danger" role="alert">
@@ -18,8 +20,8 @@
     <%= notice %>
   </div>
 <% end %>
-
-<%= yield %>
-
+  <div class="container">
+    <%= yield %>
+  </div>
 </body>
 </html>
