--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,14 +8,27 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">On The Trail</a>
+      <%= link_to 'On The Trail',   new_notification_path, class: 'navbar-brand' %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Create Notification</a></li>
-        <li><a href="#">Login/Logout</a></li>
+        <li><%= link_to 'Create Notification', new_notification_path %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= if (current_user != nil) then current_user.first_name else 'Your Account' end %><span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <% if (current_user != nil) then %>
+                <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+                <li><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete  %></li>
+            <% else %>
+                <li><%= link_to 'Log In', new_user_session_path %></li>
+                <li><%= link_to 'Create an Account', new_user_registration_path %></li>
+            <% end %>
+          </ul>
+        </li>
+
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
