Adding first name and last name to profile page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<%= render partial: 'shared/navbar' =%>
+<%= render partial: 'shared/navbar' %>
 
 <% if alert.present? %>
   <div class="alert alert-danger" role="alert">
