Default notification details to user attributes

--- a/app/views/notifications/new.html.erb
+++ b/app/views/notifications/new.html.erb
@@ -1,8 +1,8 @@
 <%= simple_form_for(@notification, html: { class: 'form-horizontal' }) do |f| %>
-    <%= f.input :first_name %>
-    <%= f.input :last_name %>
+    <%= f.input :first_name, input_html: {value: current_user.first_name} %>
+    <%= f.input :last_name, input_html: {value: current_user.last_name} %>
     <%= f.input :phone %>
-    <%= f.input :email %>
+    <%= f.input :email, input_html: {value: current_user.email} %>
     <%= f.input :contact_email %>
     <%= f.input :message %>
     <%= f.input :latitude, input_html: {value: @lat}  %>
