add sidekiq and second notification

--- a/app/views/notifications/new.html.erb
+++ b/app/views/notifications/new.html.erb
@@ -11,5 +11,6 @@
     <%= f.input :message %>
     <%= f.input :latitude, input_html: {value: @lat}  %>
     <%= f.input :longitude, input_html: {value: @lng}  %>
+    <%= f.input :notification_date %>
     <%= f.button :submit %>
 <% end %>
