--- a/app/views/notifications/new.html.erb
+++ b/app/views/notifications/new.html.erb
@@ -5,7 +5,7 @@
     <%= f.input :email, input_html: {value: current_user.email} %>
     <%= f.input :contact_email %>
     <%= f.input :contact_phone %>
-    <%= f.input :carrier, collection: @carrier_collection,
+    <%= f.input :carrier, collection: Notification::CARRIERS,
         label_method: Proc.new {|carrier| carrier[:label]},
         value_method: Proc.new {|carrier| carrier[:value]} %>
     <%= f.input :message %>
